--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libhybris"]
 	path = libhybris
-	url = https://github.com/mlehtima/libhybris-1
+	url = https://github.com/krnlyng/libhybris
